--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -26,8 +26,22 @@ html
                 i.mdi.mdi-bell-outline
                 span.count-symbol.bg-notification 1
               .dropdown-menu.dropdown-menu-right.navbar-dropdown.preview-list(aria-labelledby='notificationDropdown')
-                h6.p-3.mb-0 Notifications
+                h4.p-3.mb-0 Notifications
                 .dropdown-divider
+                a.dropdown-item.preview-item
+                  .preview-thumbnail
+                    .preview-icon.bg-success
+                      i.mdi.mdi-calendar
+                  .preview-item-content.d-flex.align-items-start.flex-column.justify-content-center
+                    h6.preview-subject.font-weight-normal.mb-1 Event today
+                    p.text-gray.ellipsis.mb-0  Just a reminder that you have an event today 
+                a.dropdown-item.preview-item
+                  .preview-thumbnail
+                    .preview-icon.bg-success
+                      i.mdi.mdi-calendar
+                  .preview-item-content.d-flex.align-items-start.flex-column.justify-content-center
+                    h6.preview-subject.font-weight-normal.mb-1 Event today
+                    p.text-gray.ellipsis.mb-0  Just a reminder that you have an event today 
                 a.dropdown-item.preview-item
                   .preview-thumbnail
                     .preview-icon.bg-success
@@ -37,7 +51,8 @@ html
                     p.text-gray.ellipsis.mb-0  Just a reminder that you have an event today 
                 .dropdown-divider
                 
-                h6.p-3.mb-0.text-center See all notifications
+                h6.p-3.mb-0.text-center 
+                  a.see-all(href='#') See all notifications
           .search-field.d-none.d-md-block
             form.d-flex.align-items-center.h-100(action='#')
               .input-group
