--- a/src/sass/parts/_nav.sass
+++ b/src/sass/parts/_nav.sass
@@ -71,3 +71,29 @@
   margin-top: 0
   padding: 0
   right: 80px
+  
+.dropdown-menu.show
+  position: absolute
+  top: 100%
+  z-index: 1000
+  float: left
+  min-width: 10rem
+  padding: 0.5rem 0
+  margin: 0.125rem 0 0
+  font-size: 1rem
+  color: #212529
+  text-align: left
+  list-style: none
+  background-color: #fff
+  background-clip: padding-box
+  border: 1px solid #ebedf2
+  border-radius: 0.25rem
+  right: 0
+  left: auto
+  display: block
+
+.see-all
+  color: #1caf5e
+  text-decoration: none
+  &:hover
+    color: #1caf5e
